# multi-room-chat-system

./: .gitignore  CMakeLists.txt  INSTRUCTIONS.md  README.md
src/client/: chat_client.cpp  test_client.cpp
src/common/: protocol.hpp  ssl_manager.hpp
src/perf/: perf_test.cpp
src/server/: chat_room.cpp  chat_room.hpp  chat_session.cpp  chat_session.hpp  main.cpp
